--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <main id="root" class="app"></main>
+  <main id="root" class="app" aria-live="polite"></main>
 </body>
 
 </html>
