--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
   <!-- stylesheets and such -->
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" type="image/png">
