added serviceWorker and manifest

--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- the basics -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-  <!-- stylesheets and such -->
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" type="image/png">
 
   <!-- meta info -->
   <title>Shajara - Journal App</title>
   <meta name="description" content="The better way to keep track of your days.">
   <meta name="author" content="Malcolm Kiano">
 
-  <meta name="twitter:card" content="summary_large_image">
-
+  <!-- SEO & sharing -->
   <meta property="og:title" content="Shajara - Journal App">
   <meta property="og:description" content="The better way to keep track of your days.">
   <meta property="og:image" content="https://shajara.now.sh/social.jpg">
@@ -24,7 +21,15 @@
   <meta property="og:image:alt" content="The better way to keep track of your days.">
   <meta property="og:url" content="https://shajara.now.sh">
   <meta property="og:type" content="website">
-  <meta name="theme-color" content="#FFD98E">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <!-- PWA stuff -->
+  <meta name="theme-color" content="#FEB931">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar" content="#FFFFFF">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" type="image/png">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-96x96.png" type="image/png">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 </head>
 
 <body>
