--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <!-- PWA stuff -->
   <meta name="theme-color" content="#FEB931">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar" content="#FFFFFF">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" type="image/png">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-96x96.png" type="image/png">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
