--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <!-- the basics -->
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, viewport-fit=cover"/>
 
   <!-- meta info -->
   <title>Shajara - Journal App</title>
@@ -26,7 +26,7 @@
   <!-- PWA stuff -->
   <meta name="theme-color" content="#FEB931">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar" content="#FFFFFF">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" type="image/png">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-96x96.png" type="image/png">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
