enhancements for android PWA

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <!-- the basics -->
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, viewport-fit=cover"/>
 
   <!-- meta info -->
   <title>Shajara - Journal App</title>
