--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- the basics -->
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1, viewport-fit=cover"
+    />
 
-<head>
-  <!-- the basics -->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, viewport-fit=cover"/>
+    <!-- meta info -->
+    <title>Shajara - Journal App</title>
+    <meta
+      name="description"
+      content="The better way to keep track of your days."
+    />
+    <meta name="author" content="Malcolm Kiano" />
 
-  <!-- meta info -->
-  <title>Shajara - Journal App</title>
-  <meta name="description" content="The better way to keep track of your days.">
-  <meta name="author" content="Malcolm Kiano">
+    <!-- SEO & sharing -->
+    <meta property="og:title" content="Shajara - Journal App" />
+    <meta
+      property="og:description"
+      content="The better way to keep track of your days."
+    />
+    <meta property="og:image" content="https://shajara.now.sh/social.jpg" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="764" />
+    <meta property="og:image:height" content="409" />
+    <meta
+      property="og:image:alt"
+      content="The better way to keep track of your days."
+    />
+    <meta property="og:url" content="https://shajara.now.sh" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- SEO & sharing -->
-  <meta property="og:title" content="Shajara - Journal App">
-  <meta property="og:description" content="The better way to keep track of your days.">
-  <meta property="og:image" content="https://shajara.now.sh/social.jpg">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="764">
-  <meta property="og:image:height" content="409">
-  <meta property="og:image:alt" content="The better way to keep track of your days.">
-  <meta property="og:url" content="https://shajara.now.sh">
-  <meta property="og:type" content="website">
-  <meta name="twitter:card" content="summary_large_image">
+    <!-- PWA stuff -->
+    <meta name="theme-color" content="#FEB931" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/favicon.png"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="%PUBLIC_URL%/icons/icon-96x96.png"
+      type="image/png"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  </head>
 
-  <!-- PWA stuff -->
-  <meta name="theme-color" content="#FEB931">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" type="image/png">
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-96x96.png" type="image/png">
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-</head>
-
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <main id="root" class="app" aria-live="polite"></main>
-</body>
-
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <main id="root" class="app" aria-live="polite"></main>
+  </body>
 </html>
